--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-    "name": "casper",
-    "description": "A clean, minimal default theme for the Ghost publishing platform",
-    "demo": "https://demo.ghost.io",
-    "version": "3.0.13",
+    "name": "performer",
+    "description": "A theme for the Ghost publishing platform (based on Casper), targeting self-promoting performers.",
+    "version": "0.0.1",
     "engines": {
         "ghost": ">=3.0.0",
         "ghost-api": "v3"
@@ -23,16 +22,13 @@
         "postship": "git fetch && gulp release"
     },
     "author": {
-        "name": "Ghost Foundation",
-        "email": "hello@ghost.org",
-        "url": "https://ghost.org"
+        "name": "Ghost Foundation, and Andrew T. Cymmer",
+        "email": "",
+        "url": ""
     },
     "gpm": {
         "type": "theme",
-        "categories": [
-            "Minimal",
-            "Magazine"
-        ]
+        "categories": []
     },
     "keywords": [
         "ghost",
@@ -41,10 +37,10 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/TryGhost/Casper.git"
+        "url": "https://github.com/andrewtcymmer/ghostcms-performer.git"
     },
-    "bugs": "https://github.com/TryGhost/Casper/issues",
-    "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
+    "bugs": "https://github.com/andrewtcymmer/ghostcms-performer/issues",
+    "contributors": "https://github.com/andrewtcymmer/ghostcms-performer/graphs/contributors",
     "devDependencies": {
         "@tryghost/release-utils": "0.6.3",
         "autoprefixer": "9.8.6",
